--- a/public/assets/css/show/products.css
+++ b/public/assets/css/show/products.css
@@ -659,6 +659,7 @@ input[type=text] {
     font-weight: 600;
     color: green;
     cursor: pointer;
+    user-select: none;
     transition: color 0.3s ease;
 }
 .alert-danger
@@ -668,4 +669,55 @@ input[type=text] {
     font-size: 11px;
     color: var(--clr-hover-btn);
     margin-bottom: 10px;
+}
+/* ---- Paginate ---- */
+.pagination-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
+    width: 50%;
+}
+
+.pagination-container .pagination {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.pagination-container .pagination li {
+    margin: 0 5px;
+}
+
+.pagination-container .pagination li a,
+.pagination-container .pagination li span {
+    display: inline-block;
+    padding: 10px 18px; 
+    font-size: 1.1rem; 
+    color: #333;
+    background-color: #f5f5f5;
+    border: 1px solid #ddd;
+    text-decoration: none;
+    transition: background-color 0.3s;
+}
+
+.pagination-container .pagination li a:hover {
+    background-color: #e9ecef;
+}
+
+.pagination-container .pagination li.active span {
+    background-color: #007bff;
+    color: white;
+    border-color: #007bff;
+}
+
+.pagination-container .pagination li.disabled span {
+    color: #ccc;
+}
+
+/* Збільшення розміру стрілок */
+.pagination-container .pagination li a:before,
+.pagination-container .pagination li a:after {
+    font-size: 1.5rem; 
 }
