--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -13,15 +13,18 @@
     --clr-i-fa-globe: #838383;
     --font-montserrat-banner-text:"Montserrat", sans-serif;
 }
+
 html
 {
     font-size: 10px;
 }
+
 body
 {
     margin: 0px;
     background: var(--clr-body);
 }
+
 *,*:after,*:before
 {
     margin: 0;
@@ -29,6 +32,7 @@ body
     box-sizing: border-box;
     scroll-behavior: smooth
 }
+
 ul
 {
     list-style-type: none
@@ -40,24 +44,28 @@ a
 }
 
 /* ---- App ---- */
-.container,.top-left,.top-right
-{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-direction: row;
+.container {
+    max-width: 1300px;
+    margin: 0 auto;
+}
+
+.navbar-container {
     height: 65px;
-}
-.section-phone-select
-{
     display: flex;
     align-items: center;
-    text-align: center;
-    margin-left: 7vh;
+    justify-content: space-between;
 }
-.section-phone-select > select
-{
-    text-align: left;
+
+.top-left,.top-right,.section-phone-select {
+    display: flex;
+    align-items: center;
+}
+
+.section-phone-select {
+    margin-left: 45px;
+}
+
+.section-phone-select > select {
     border: none;
     outline: none;
     background: transparent;
@@ -67,125 +75,110 @@ a
     padding: 0vh 0.3vh 0vh 1vh;
     cursor: pointer;
 }
-.top-right a,
-.right-container
-{
-    padding: 0vh 1.5vh 0vh;
+
+.right-container, .top-right a {
+   padding: 0 15px;
 }
-.number-save
-{
-    text-align: right;
+
+.orders {
     position: absolute;
     font-family: var(--font-montserrat-banner-text);
     font-size: 12px;
-    font-weight: 500;
-    background:var(--clr-ellipse);
+    font-weight: 700;
     border-radius: 50%;
     margin-top: 5px;
-    padding: 0px 5px;
+    padding: 0 5px;
+    background:var(--clr-ellipse);
     color: var(--clr-white-banner-text);
-    z-index: 9999;
+    z-index: 999;
 }
-.top-right img
-{
-    position: relative;
+
+.top-right img {
     display: flex;
-    align-items: center;
-    justify-content: center;
 }
+
 /* ---- Advertising section ---- */
-.advertising-line
-{
+.advertising-line {
+    margin: 35px 0px 30px;
+}
+
+.advertising-container {
     display: flex;
     align-items: center;
-    justify-content: center;
-    flex-direction: row-reverse;
-    height: auto;
-    background: url('/assets/images/AdvertisingBanner/BannerCard.png') no-repeat center;
-    background-size: contain;
+    justify-content: space-around;
+    background-color:#101010;
+    border-radius: 35px;
 }
-.advertising-banner-main-text
-{
+
+.banner-img {
+    padding: 35px 0px 0px;
+}
+
+.banner-text {
     font-family: var(--font-montserrat-banner-text);
     font-size: 35px;
     font-weight: 600;
-    line-height: 36.57px;
-    padding: 0vh 17vh 0vh;
-    text-align: center;
     color: var(--clr-white-banner-text);
 }
+
 /* ---- Products ---- */
-.scroll--container
-{
-    width: 100%;
+.container--title {
+    display: inline-block;
+    margin: 2.5vh 0vh 2vh 10vh;
 }
-.container--title
-{
-    width: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.container--title h2
-{
-    text-align: left;
-    margin: 2.5vh 0vh;
+
+.container--title h2 {
     font-family: var(--font-montserrat-banner-text);
     font-size: 20px;
     font-weight: 600;
-    line-height: 24.38px;
     color: var(--clr-title--scroll);
 }
-.swiper
-{
-    width: 70%;
-    height: 100%;
-}
-.swiper-slide
-{
-    text-align: center;
-    font-size: 18px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.scroll--container--desktop,.scroll--item
-{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.scroll--container--desktop
-{
-    display: grid;
-    grid-template-columns: repeat(3, 0fr);
-    padding: 0;
+
+.scroll--container {
     margin-bottom: 25px;
 }
-.scroll--item > img,
-.scroll--item > span
-{
-    width: 75%;
-    margin-top: 4vh;
+
+.swiper {
+    width: 100%;
+    height: 100%;
 }
-.scroll--item
-{
+
+.scroll--item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.scroll--container--desktop {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+}
+
+.scroll--item > img,
+.scroll--item > span {
+    width: 75%;
+    margin-top: 3vh;
+}
+
+.scroll--item {
     flex-direction: column;
 }
-.scroll--list
-{   
-    text-align: center;
-    position: relative;
+
+.scroll--list {   
     width: 350px;
     height: 408px;
     background: var(--clr-card-product);
     border-radius: 30px;
     box-sizing: border-box;
     box-shadow: 0px 0px 20px 0px var(--clr-box-card);
-    margin: 0vh 5vh;
+    margin: 0vh 3vh;
 }
-.select-container > i
-{
+.select-container {
+    position: relative;
+}
+
+.select-container > i {
     position: absolute;
     top: 2vh;
     left: 3vh;
@@ -194,8 +187,8 @@ a
     color: var(--clr-body);
     cursor: pointer;
 }
-.scroll--type--cover
-{
+
+.scroll--type--cover {
     font-family: var(--font-montserrat-banner-text);
     font-size: 18px;
     font-weight: 700;
@@ -203,153 +196,126 @@ a
     text-align: center;
     color: var(--clr-body);
 }
+
 /* ---- Headphone ---- */
 .card--container--item,
 .scroll--card--info,
-.scroll--card--price
-{
+.scroll--card--price {
     width: 100%;
     margin-top: 1.5vh;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
 }
-.scroll--card--info
-{
+
+.scroll--card--info {
     margin-left: 2vh;
 }
-.scroll--card--price
-{
-    margin-top: 0vh;
-}
+
 .scroll--card--info,
-.scroll--card--price
-{
+.scroll--card--price {
     flex-direction: column;
 }
-.scroll--img
-{
+
+.scroll--img {
     height: 237px;
 }
-.sc-lt-head
-{   
-    margin: 2vh 5vh;
-}
-.scroll--card--info h3
-{   
+
+.scroll--card--info h3 {   
     text-align: left;
     font-family:var(--font-montserrat-banner-text);
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 600;
     margin-bottom: 2vh;
     color: var(--clr-body);
 }
-.scroll--card-info
-{
+
+.scroll--card-info {
     width: 100%;
-    text-align:left;
 }
-.st-rate
-{
+
+.st-rate {
     text-align: left;
     font-size: 22px;
     font-weight: 600;
     margin: 0vh 1.1vh 0vh 3vh;
     color: var(--clr-ellipse);
 }
-.rate
-{
+
+.rate {
     text-align: left;
     font-family: var(--font-montserrat-banner-text);
     font-size: 18px;
     font-weight: 500;
     color: var(--clr-title--scroll);
 }
-.price,.old--price
-{
+
+.price,.old--price {
     font-family:var(--font-montserrat-banner-text);
     line-height: 20.72px;
     color: var(--clr-ellipse);
 }
-.price
-{
-    text-align: right;
+
+.price {
     font-size: 17px;
     font-weight: 600;
 }
-.old--price
-{
+
+.old--price {
     text-decoration: line-through;
     text-align: right;
     font-size: 13px;
     font-weight: 600;
     color: var(--clr-old--price);
 }
+
 /* ---- Footer ---- */
-.footer-top-product,.wrap-container
-{
-    width: 100%;
+.footer-top-product {
+    margin-top: 45px;
+}
+
+.wrap-container {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-}
-.wrap-container
-{
-    position: relative;
+    justify-content: space-around;
     height: 149px;
-    width: 65%;
-    margin-top: 2vh;
+    width: 100%;
     box-sizing: border-box;
     border-radius: 30px 30px 0px 0px;
     background-color: var(--clr-white-banner-text);
 }
-.wrap-container-image img
-{
-    position: absolute;
-    top: 4vh;
-    left: 6vh;
-}
-.sc-nv,.social-media-container
-{
+
+.sc-nv,.social-media-container {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.mspoiler,.item > a
-{
-    text-align: left;
+
+.mspoiler,.item > a {
     font-family: var(--font-montserrat-banner-text);
     font-size: 17px;
     font-weight: 400;
     color: var(--clr-footer-text);
 }
-.mspoiler
-{
-    padding-bottom: 1.5vh;
+
+.item,.mspoiler {
+   padding: 1vh 0vh;
 }
-.item
-{
-   padding: 0.7vh 0vh;
-}
-.fa-glob
-{
-    font-size: 16px;
+
+.fa-glob,.item-nv > a {
+    font-size: 17px;
     font-weight: 500;
     color: var(--clr-i-fa-globe);    
 }
-.item-nv > a
-{ 
-    margin: 0vh 1vh;
-    font-size: 16px;
-    font-weight: 500;
+
+.item-nv > a { 
+    padding: 0px 12px;
     color: var(--clr-footer-item);
 }
-.social-media-item > i
-{
-    padding: 0vh 1vh;
+
+.social-media-item > i {    
     font-size: 26px;
-    font-weight: 500;
+    padding: 0px 12px;
     background-color: transparent;
     color: var(--clr-footer-item);
-    cursor: pointer;
 }
