--- a/public/assets/css/order/order.css
+++ b/public/assets/css/order/order.css
@@ -20,15 +20,13 @@
 }
 
 /* Header Styles */
-h1, h2 
-{
+h1, h2 {
     font-size: 2rem;
     margin-bottom: 20px;
     color: var(--clr-teg);
 }
 
-.header-title
-{
+.header-title {
     font-family: var(--font-montserrat-banner-text);
     font-weight: 700;
     font-size: 2.5rem; 
@@ -37,8 +35,7 @@ h1, h2
 }
 
 /* Map Styling */
-iframe
-{
+iframe {
     width: 100%;
     height: 400px;
     border: 0;
@@ -49,15 +46,13 @@ iframe
 form {
     margin-top: 20px;
 }
-.title-input
-{
+.title-input {
     font-family: var(--font-montserrat-banner-text);
     font-size: 1.8rem;
     font-weight: 600;
 }
 
-.input-field
-{
+.input-field {
     width: 100%;
     padding: 12px;
     margin-bottom: 10px;
@@ -68,30 +63,26 @@ form {
     transition: border-color 0.3s;
 }
 
-.tit-ord
-{
+.tit-ord {
     font-family: var(--font-montserrat-banner-text);
     font-size: 1.8rem; 
     font-weight: 600;
     margin-bottom: 25px;
 }
 
-.price-order-container
-{
+.price-order-container {
     display: flex; 
     justify-content: space-between; 
     margin-bottom: 15px;
 }
 
-.price-order-container > span
-{
+.price-order-container > span {
     font-family: var(--font-montserrat-banner-text);
     font-weight: 500;
     font-size: 1.4rem;
 }
 
-.label-input
-{
+.label-input {
     display: block;
     margin-bottom: 5px;
     font-family: var(--font-montserrat-banner-text);
@@ -100,8 +91,7 @@ form {
 }
 
 /* Button Styling */
-button[type="submit"]
-{
+button[type="submit"] {
     display: block;
     width: 100%;
     background-color: var(--clr-submit-btn);
@@ -116,52 +106,44 @@ button[type="submit"]
     transition: background-color 0.3s ease;
 }
 
-button[type="submit"]:hover
-{
+button[type="submit"]:hover {
     background-color: var(--clr-hover-btn);
 }
 
-.fa-pay
-{
+.fa-pay {
     font-size: 1.5rem;
     padding-right: 5px;
 }
 
-.payment-method-name
-{
+.payment-method-name {
     font-family: var(--font-montserrat-banner-text);
     font-weight: 600;
     font-size: 1.6rem;
 }
 
-.payment_method
-{
+.payment_method {
     transform: scale(1.5) !important;
 }
 
 /* Order Summary Section */
-.order-summary
-{
+.order-summary {
     margin-bottom: 20px;
 }
 
-.order-summary h2
-{
+.order-summary h2 {
     font-size: 1.5rem;
     margin-bottom: 10px;
 }
 
 /* Payment Section */
-.payment-method
-{
+.payment-method {
     display: flex;
     align-items: center;
     gap: 10px;
     margin-bottom: 15px;
 }
 
-.promoCode
-{
+.promoCode {
     display: none;
     width: 100%;
     padding: 10px;
@@ -173,28 +155,18 @@ button[type="submit"]:hover
     box-sizing: border-box;
     transition: border-color 0.3s;
 }
-.promoCode.active
-{
+
+.promoCode.active {
     display: block;
 }
-.alert-danger
-{
+
+.alert-danger {
     font-family: var(--font-montserrat-banner-text);
     font-weight: 500;
     font-size: 11px;
     color: var(--clr-hover-btn);
     margin-bottom: 5px;
 }
-/* .success
-{
-    text-align: center;
-    width: 100%;
-    font-family: var(--font-montserrat-banner-text);
-    font-weight: 500;
-    font-size: 15px;
-    margin-top: 3vh;
-    color: green;
-} */
 
 /* Responsive Design */
 @media (max-width: 768px) {
