--- a/public/assets/css/contact/contact.css
+++ b/public/assets/css/contact/contact.css
@@ -91,27 +91,18 @@
     color: var(--clr-viber);
 }
 
-.contact-info {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: var(--font-montserrat-banner-text);
-    font-size: 2rem;
-    font-weight: 600;
-    margin-bottom: 42px;
-    color: var(--clr-title-card);
-}
-.contact-info i {
-    font-size: 2.3rem;
-    font-weight: 600;
-}
-.contact-info a {
-    margin-left: 10px;
-    text-decoration: none;
-    transition: .5s;
-    color: var(--clr-title-card);
-}
 
-.contact-info a:hover {
-    color: var(--clr-ellipse);
+@media (max-width:530px) {
+    .section-contact-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .media__link__container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+    }
+
 }
