--- a/public/assets/css/order/reserved.css
+++ b/public/assets/css/order/reserved.css
@@ -21,7 +21,6 @@
 }
 .media-border-container
 {   
-    width: 730px;
     height: 95px;
     border-radius: 30px;
     box-shadow: 0px 0px 20px 0px #0000001A;
@@ -36,4 +35,17 @@
     color: var(--clr-title-card);
     padding: 3.5vh;
     text-align: center;
+}
+
+@media (max-width:800px) {
+    .media-border-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .border-text {
+        padding: 0;
+    }
 }
